--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <body>
         <div class="container">
             <div class="panel"
-                style="background-image: url('images/1.jpg');">
+                style="background-image: url('images/1.webp');">
                 <h3>Dodge Charger ScatPack</h3>
             </div>
-            <div class="panel" style="background-image: url('images/2.jpg');">
+            <div class="panel" style="background-image: url('images/2.webp');">
                 <h3>Dodge Charger Hellcat </h3>
             </div>
-            <div class="panel" style="background-image: url('images/3.jpg');">
+            <div class="panel" style="background-image: url('images/3.webp');">
                 <h3>Ford Mustang GT</h3>
             </div>
-            <div class="panel" style="background-image: url('images/4.jpg');">
+            <div class="panel" style="background-image: url('images/4.webp');">
                 <h3>Dodge Charger Hellcat</h3>
             </div>
-            <div class="panel" style="background-image: url('images/5.jpg');">
+            <div class="panel" style="background-image: url('images/5.webp');">
                 <h3>Ford Mustang GTD</h3>
             </div>
         </div>
